Challenge 7/style.css
* {
  margin: 0;
  box-sizing: border-box;
  font-family: "Roboto", sans-serif;
}

:root {
  --parchment: #F3EED9;
  --ironstone: #824936;
  --outer-space: #222C2A;
  --white: #fff;
}

.hero {
  padding: 10rem 35rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: .5rem;

  text-align: center;
  background-color: var(--parchment);
}

.hero__subtext {
  font-size: 18px;
  font-weight: 300;
  letter-spacing: .4rem;
}

.hero__title {
  color: var(--ironstone);
  font-size: 60px;
  font-family: "Playfair Display", serif;
  font-weight: 900;
}

.quality {
  padding: 6rem 16rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 4rem;
}

.quality__title {
  color: var(--ironstone);
  font-size: 36px;
  font-family: "Playfair Display", serif;
}

.quality__text {
  display: flex;
  gap: 3.5rem;
  line-height: 2rem;
  font-size: 21px;
}

.custom {
  padding: 6rem 16rem;
  display: flex;
  gap: 4rem;
  background-color: var(--outer-space);
}

.custom__description {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  color: white;
}

.custom__title {
  font-size: 36px;
  font-family: "Playfair Display", serif;
}

.custom__text {
  font-size: 21px;
  line-height: 2rem;
}

.custom__image {
  width: 150%;
  max-width: 100%;
}

.care {
  padding: 6rem 16rem;
  display: flex;
  gap: 4rem;
  background-color: var(--ironstone);
}

.care__description {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  color: white;
}

.care__title {
  font-size: 36px;
  font-family: "Playfair Display", serif;
}

.care__text {
  font-size: 21px;
  line-height: 2rem;
}

.care__image {
  width: 150%;
  max-width: 100%;
}

